# discourse-rss-auto-archive-linked-content

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  COOKIES.md  Cargo.toml  Dockerfile  MAIN_TASKS.md  PRODUCTION_SETUP.md  PROJECT_COMPLETION_REPORT.md  README.md  REMAINING_WORK.md  SPEC.md  STAGE2_STREAMING_UPLOAD.md  VIDEO_PROCESSING_ANALYSIS.md  cleanup-bad-tiktok-subtitles.sh  config.env.example  config.example.toml  config.toml  dc-cookies-browser.sh  dc-dev-up.sh  dc-down-up.sh  dc-lib.sh  dc-logs.sh  dc-prod.sh  dc-prune-safe.sh  dc-ps.sh  dc-rebuild.sh  dc-reset-db.sh  dc-reset-prod.sh  dc-restart.sh  dc-sqlite3-query.sh  dc-start.sh  dc-stop.sh  dc-update-low-downtime.sh  dc-update.sh  dev-cp-db-from-server.sh  discourse-link-archiver.service  docker-compose.dev.yml  docker-compose.prod.yml  (+5 more)
.github/workflows/: ci.yml
api-examples/: README.md  fetch.py  posts.json  posts.rss  t_2108.rss  t_2108_post_452.json  t_2108_post_452_formatted.json  t_2108_posts.json  t_2108_posts_pn_21.json  t_2108_posts_pn_41.json  t_2108_posts_pn_5.json  t_2108_posts_pn_61.json  t_2108_posts_pn_81.json  t_2144.rss  t_2144_posts.json  t_2144_posts_pn_21.json  t_2144_posts_pn_5.json  t_2144_posts_pn_61.json  tiktok_meta_gallery_music.json  tiktok_meta_video-255.json  tiktok_meta_video-405.json  tiktok_meta_video-543.json  tiktok_meta_video.json  tiktok_meta_video2.json
scripts/: entrypoint.sh  install_deps_alpine.sh  install_deps_arch.sh  install_deps_fedora.sh  install_deps_opensuse.sh  install_deps_ubuntu.sh  test_tiktok_limits.py  test_tiktok_scraper.py  yt_cookies_json_to_cookies_txt.py
spec/draft/: 1-claude.md  2-gpt-5-2.md  3-gemini.md
src/: chromium_profile.rs  config.rs  constants.rs  dedup.rs  fs_utils.rs  lib.rs  main.rs  og_extractor.rs  tls.rs
src/archive_today/: mod.rs
src/archiver/: comment_worker.rs  gallerydl.rs  mod.rs  monolith.rs  playlist.rs  rate_limiter.rs  screenshot.rs  tiktok_comments.rs  transcript.rs  worker.rs  ytdlp.rs
src/auth/: cleanup.rs  csrf.rs  middleware.rs  mod.rs  password.rs  session.rs  username.rs
src/backup/: mod.rs
src/components/: alert.rs  badge.rs  button.rs  card.rs  carousel.rs  form.rs  layout.rs  media.rs  metadata.rs  mod.rs  pagination.rs  table.rs  tabs.rs
src/db/: backfill.rs  fts.rs  migrations.rs  mod.rs  models.rs  queries.rs
src/handlers/: bluesky.rs  facebook.rs  generic.rs  imgur.rs  instagram.rs  mod.rs  normalize.rs  reddit.rs  registry.rs  streamable.rs  tiktok.rs  traits.rs  twitter.rs  youtube.rs
src/ipfs/: mod.rs
src/rss/: link_extractor.rs  mod.rs  poller.rs  thread_archive_worker.rs  thread_archiver.rs
src/s3/: mod.rs  multipart.rs
src/wayback/: mod.rs
src/web/: auth.rs  diff.rs  export.rs  feeds.rs  mod.rs  routes.rs  stats_cache.rs  stream_command.rs  templates.rs
src/web/pages/: admin.rs  all_archives.rs  archive.rs  auth.rs  banner.rs  comment.rs  comparison.rs  debug.rs  home.rs  mod.rs  post.rs  search.rs  site.rs  stats.rs  submit.rs  threads.rs
static/css/: style.css
static/js/: carousel.js  comments.js  copy-indicator.js  nsfw.js  stream-command.js  theme.js  transcript.js  vertical-video-layout.js  video-volume.js
tests/: archive_pipeline_test.rs  auth_test.rs  comment_extraction_test.rs  comment_test.rs  database_test.rs  discourse_json_api_test.rs  export_test.rs  json_rss_compatibility_test.rs  pagination_test.rs  rss_poll_test.rs  submission_flow_test.rs  subtitle_test.rs  web_routes_test.rs
tests/fixtures/: tiktok_sample.vtt
