[package]
name = "discourse-link-archiver"
version = "0.1.0"
edition = "2021"
description = "Archive links from Discourse RSS feeds to S3"
readme = "README.md"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process", "fs"] }

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "multipart"] }

# S3 storage (rust-s3 has lower MSRV than aws-sdk-s3)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }

# RSS parsing
feed-rs = "2"

# HTML parsing
scraper = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates
askama = "0.12"
askama_axum = "0.4"

# Configuration
dotenvy = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
url = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
once_cell = "1"
mime_guess = "2"
urlencoding = "2"

# Compression
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
