[package]
name = "discourse-link-archiver"
version = "0.1.0"
edition = "2021"
description = "Archive links from Discourse RSS feeds to S3"
readme = "README.md"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "process", "fs"] }
tokio-util = "0.7"

# Web framework
axum = { version = "0.7", features = ["macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "fs", "trace"] }

# TLS / Let's Encrypt ACME
rustls-acme = { version = "0.11", features = ["axum"] }
futures-util = "0.3"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "json", "multipart"] }

# S3 storage (rust-s3 has lower MSRV than aws-sdk-s3)
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
# AWS SDK for multipart uploads and server-side copy
aws-sdk-s3 = "1.68"
aws-config = "1.5"

# Posts polling (using JSON API, not RSS anymore)
# feed-rs = "2"  # No longer needed - using JSON API via serde_json

# HTML parsing
scraper = "0.22"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Templates (maud for HTML generation)
maud = { version = "0.26", features = ["axum"] }

# Configuration
dotenvy = "0.15"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Utilities
url = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
once_cell = "1"
mime_guess = "2"
urlencoding = "2"
rand = "0.8"

# Password hashing
argon2 = { version = "0.5", features = ["std"] }

# Compression
zstd = "0.13"
zip = "2"

# Text diffing
similar = "2"

# Browser automation for screenshots
chromiumoxide = { version = "0.8", default-features = false, features = ["tokio-runtime"] }

# Image processing for perceptual hashing
img_hash = "3"
# Enable PNG/JPEG support for img_hash's image crate
image = { version = "0.23", default-features = false, features = ["png", "jpeg"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
tower = { version = "0.5", features = ["util"] }
insta = "1.34"

[profile.release]
lto = true
codegen-units = 1
strip = true

# Faster rebuilds for iterative deployments (less optimization, incremental).
# Use via Docker/Compose build arg: CARGO_PROFILE=release-fast
[profile.release-fast]
inherits = "release"
opt-level = 3
debug = 0
lto = false
codegen-units = 16
strip = false
incremental = true

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
# Set lint group priorities (higher priority = processed later)
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# File size casts (u64/usize to i64) are safe - files won't exceed 2^63 bytes
cast_possible_wrap = "allow"
# Precision loss is acceptable for display purposes (file sizes)
cast_precision_loss = "allow"
# Allow missing const fn - most of these are trivial getters
missing_const_for_fn = "allow"
# Allow these style preferences
if_not_else = "allow"
use_self = "allow"
# Allow dropping temporaries slightly early (chromiumoxide patterns)
significant_drop_tightening = "allow"
# Allow these as they require larger refactoring or are false positives
too_many_arguments = "allow"
redundant_clone = "allow"
# Style preferences that don't affect correctness
useless_let_if_seq = "allow"
assigning_clones = "allow"
implicit_clone = "allow"
